add odefood, MoviesStore Projects

--- a/MoviesStore/MovieStore.Data/MovieStore.Data.csproj
+++ b/MoviesStore/MovieStore.Data/MovieStore.Data.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,7 +6,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MovieStore.Core\MovieStore.Core.csproj" />
-    <ProjectReference Include="..\MovieStore.Data\MovieStore.Data.csproj" />
   </ItemGroup>
 
 </Project>
