--- a/Pie2Shop/Pie2Shop/appsettings.json
+++ b/Pie2Shop/Pie2Shop/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": 
+      "Server=DESKTOP-6B79JB0\\SQLSERVER; Database=BethaneysPieShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
