--- a/Pie2Shop/Pie2Shop/appsettings.json
+++ b/Pie2Shop/Pie2Shop/appsettings.json
@@ -10,6 +10,6 @@
 
   "ConnectionStrings": {
     "DefaultConnection": 
-      "Server=DESKTOP-6B79JB0\\SQLSERVER; Database=BethaneysPieShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "Server=.\\sql2012; Database=BethaneysPieShop;User Id=sa;MultipleActiveResultSets=true"
   }
 }
