--- a/Pie2Shop/Pie2Shop/appsettings.json
+++ b/Pie2Shop/Pie2Shop/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": 
-      "Server=.\\sql2012; Database=BethaneysPieShop;User Id=sa;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sql2012; Database=BethaneysPieShop;User Id=sa;MultipleActiveResultSets=true",
+    "MainConnection": "Server=DESKTOP-6B79JB0\\SQLSERVER; Database=BethaneysPieShop;User Id=s1;MultipleActiveResultSets=true"
+
   }
 }
